--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-altair
-pandas
 streamlit
-audio-recroder-streamlit
-librosa
-keras.models 
-jason
-scipy.io.wavfile
-tempfile
+numpy
+pandas
+scipy
+librosa==0.9
+resampy
+tensorflow==2.15.1
+streamlit-audiorec
